--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -10,12 +10,12 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
-CPMAddPackage(
-  NAME absl
-  GIT_TAG 20210324.2
-  GITHUB_REPOSITORY abseil/abseil-cpp
-  OPTIONS "GTEST_HAS_ABSL 1"
-)
+#CPMAddPackage(
+#  NAME absl
+#  GIT_TAG 20210324.2
+#  GITHUB_REPOSITORY abseil/abseil-cpp
+#  OPTIONS "GTEST_HAS_ABSL 1"
+#)
 
 #CPMAddPackage(NAME LiveHDCore SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
@@ -28,4 +28,5 @@ add_library(LiveHDCore ${core_headers} ${core_sources})
 
 set_target_properties(LiveHDCore PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "LiveHDCore LGraph")
 
-target_link_libraries(LiveHDCore LiveHDElab LiveHDMMapLib LiveHDTask absl)
+#target_link_libraries(LiveHDCore LiveHDElab LiveHDMMapLib LiveHDTask)
+#target_link_libraries(LiveHDCore ${Boost_LIBRARIES})
