--- a/elab/CMakeLists.txt
+++ b/elab/CMakeLists.txt
@@ -10,12 +10,12 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
-CPMAddPackage(
-  NAME absl
-  GIT_TAG 20210324.2
-  GITHUB_REPOSITORY abseil/abseil-cpp
-  OPTIONS "GTEST_HAS_ABSL 1"
-)
+#CPMAddPackage(
+#  NAME absl
+#  GIT_TAG 20210324.2
+#  GITHUB_REPOSITORY abseil/abseil-cpp
+#  OPTIONS "GTEST_HAS_ABSL 1"
+#)
 
 #CPMAddPackage(NAME LiveHDElab SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
@@ -32,4 +32,4 @@ target_include_directories(
     LiveHDElab PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 )
 #                $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
-target_link_libraries(LiveHDElab absl)
+#target_link_libraries(LiveHDElab absl)
