--- a/mmap_lib/CMakeLists.txt
+++ b/mmap_lib/CMakeLists.txt
@@ -10,12 +10,12 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
-CPMAddPackage(
-  NAME absl
-  GIT_TAG 20210324.2
-  GITHUB_REPOSITORY abseil/abseil-cpp
-  OPTIONS "GTEST_HAS_ABSL 1"
-)
+#CPMAddPackage(
+#  NAME absl
+#  GIT_TAG 20210324.2
+#  GITHUB_REPOSITORY abseil/abseil-cpp
+#  OPTIONS "GTEST_HAS_ABSL 1"
+#)
 
 #CPMAddPackage(NAME LiveHDMMapLib SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
@@ -27,4 +27,4 @@ add_library(LiveHDMMapLib ${mmap_lib_headers})
 
 set_target_properties(LiveHDMMapLib PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "LiveHDMMapLib" LINKER_LANGUAGE CXX)
 
-target_link_libraries(LiveHDMMapLib absl)
+#target_link_libraries(LiveHDMMapLib absl)
