--- a/task/CMakeLists.txt
+++ b/task/CMakeLists.txt
@@ -10,12 +10,12 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
-CPMAddPackage(
-  NAME absl
-  GIT_TAG 20210324.2
-  GITHUB_REPOSITORY abseil/abseil-cpp
-  OPTIONS "GTEST_HAS_ABSL 1"
-)
+#CPMAddPackage(
+#  NAME absl
+#  GIT_TAG 20210324.2
+#  GITHUB_REPOSITORY abseil/abseil-cpp
+#  OPTIONS "GTEST_HAS_ABSL 1"
+#)
 
 #CPMAddPackage(NAME LiveHDTask SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
@@ -28,4 +28,4 @@ add_library(LiveHDTask ${task_headers} ${task_sources})
 
 set_target_properties(LiveHDTask PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "LiveHDTask")
 
-target_link_libraries(LiveHDTask LiveHDMMapLib absl)
+target_link_libraries(LiveHDTask LiveHDMMapLib)
