--- a/mmap_lib/CMakeLists.txt
+++ b/mmap_lib/CMakeLists.txt
@@ -2,6 +2,7 @@
 file(GLOB mmap_lib_headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
 
 add_library(LiveHDMMapLib ${mmap_lib_headers})
-
 set_target_properties(LiveHDMMapLib PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "LiveHDMMapLib" LINKER_LANGUAGE CXX)
-#target_link_libraries(LiveHDMMapLib absl)
+
+#add_subdirectory(tests)
+
